# nuspec-rs

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/: codecov.yml
.github/workflows/: checks.yaml  publish.yaml
crates/cargo-nuspec/: Cargo.toml  README.md  cargo-nuspec.nuspec
crates/cargo-nuspec/src/: main.rs
crates/nuspec/: Cargo.toml
crates/nuspec-test/: Cargo.toml  build.rs
crates/nuspec-test/src/: lib.rs
crates/nuspec/src/: generate.rs  lib.rs  spec.rs
