[workspace]
resolver = "3"
members = ["crates/nuspec", "crates/nuspec-test"]

[workspace.package]
edition = "2024"
authors = ["Sergey Vilgelm <sergey@vilgelm.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/sv-tools/nuspec-rs"
keywords = ["nuspec", "nuget", "nupkg"]
categories = ["development-tools::build-utils"]
version = "0.2.0"
