[package]
name = "cargo-nuspec"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "A cargo subcommand to generate .nuspec files for Rust packages"
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "cargo-nuspec"
path = "src/main.rs"

[dependencies]
nuspec = { path = "../nuspec" }
clap = { version = "4.0", features = ["derive"] }
cargo_metadata = "0.18"
toml = "0.8"
anyhow = "1.0"
semver = "1.0"