[package]
name = "nuspec-test"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "A test crate for nuspec"

[[bin]]
name = "nuspec_test_bin_1"
path = "src/main.rs"

[[bin]]
name = "nuspec_test_bin_2"
path = "src/main.rs"

[lib]
name = "nuspec_test_lib"
crate-type = ["cdylib", "rlib", "staticlib"]

[build-dependencies]
nuspec = { path = "../nuspec" }

# All fields must be in the camelCase format (same as in the xml file)
[package.metadata.nuspec.package.metadata]
requireLicenseAcceptance = false

[[package.metadata.nuspec.package.files.file]]
src = "../../LICENSE-MIT"

[[package.metadata.nuspec.package.files.file]]
src = "../../LICENSE-APACHE"
