[package]
name = "nuspec"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Implementation of Nuspec Specification"
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
quick-xml = { version = "0.38.0", features = ["serialize"] }
serde = { version = "1.0.219", features = ["derive"] }
