[package]
name = "nuspec"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Implementation of Nuspec Specification"
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["generate"]
# The `generate` feature is enabled by default, but can be disabled
# if you want to use the library without generating Nuspec files.
generate = ["toml"]

[dependencies]
quick-xml = { version = "0.38.0", features = ["serialize"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = { version = "0.9.2", optional = true }
